// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering test renders correctly with not selected value 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="simple-tab-1"
    hidden=""
    id="simple-tabpanel-1"
    role="tabpanel"
  />
</DocumentFragment>
`;

exports[`Rendering test renders correctly with selected value 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="simple-tab-1"
    id="simple-tabpanel-1"
    role="tabpanel"
  >
    <div
      class="sc-Qotzb dvSRyf MuiBox-root css-0"
    >
      foobarbaz
    </div>
  </div>
</DocumentFragment>
`;
